tests/NormalTests/paczka1/fuzzy1/65805428.err
Error in line 1: dLEk S482 66,7
Error in line 6: dLEk S482 46,51
Error in line 2: dLEk A783 72,8
Error in line 10: 3Fgq A314 18,5
Error in line 8: dLEk S482 105,1
Error in line 14: dLEk S891 47,3
Error in line 35: Gohqy@ S482 50,7
Error in line 32: f8curuF4e3C A783 93,5
